[package]
name = "nihonshufyi"
version = "0.1.0"
edition = "2021"
authors = ["FYIPedia"]
description = "Sake guide with rice varieties, breweries, and tasting notes — async API client for nihonshufyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/nihonshufyi-rs"
homepage = "https://nihonshufyi.com"
documentation = "https://docs.rs/nihonshufyi"
readme = "README.md"
keywords = ["sake", "nihonshu", "rice", "brewery", "junmai"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
